refactor auth slice endpoints to /v1 registration API
